<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".Formulario_evento">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txNomEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre_del_evento"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txLugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lugar"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btFecha"
                    android:layout_width="22dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imvFotoFormulario"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="15dp">

        <LinearLayout
            android:layout_width="463dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hora"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvHora"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/txOrganizador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/organizador"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txAforo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/aforo"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txPrecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/precio"
                android:inputType="textPersonName"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/tvArtistas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/artistas_invitados"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txArtistas"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/descripci_n_del_evento"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/txDescripcion"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <Button
            android:id="@+id/btRestablecer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/restablecer"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/guardar"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>