<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="7dp">

    <TextView
    android:id="@+id/tvNombreM"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:textAllCaps="false"
    android:textSize="25sp"
    android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="284dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="107dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/lugar"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/fecha"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAforo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/aforo"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrganizador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/organizador"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="104dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLugarM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvFechaM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvAforoM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvOrganizadorM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvHoraM"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:padding="2dp"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imgVEvento"
            android:layout_width="200dp"
            android:layout_height="139dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/avatars[4]" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvArtis_Inv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/artistas_invitados"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvArtis_InvM"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:padding="5dp" />

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/descripci_n_del_evento"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDescripcionM"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:padding="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/precio" />

        <TextView
            android:id="@+id/tvPrecioM"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp" />

        <CheckBox
            android:id="@+id/checkGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/guardar"
            android:clickable="false"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:foregroundGravity="center"
        android:isIndicator="true"
        android:numStars="5" />


    <Button
        android:id="@+id/btAnadirOpi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/a_adir_opini_n" />


</LinearLayout>