<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anadir_Opinion">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="207dp">

        <TextView
            android:id="@+id/tvNombreM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textAllCaps="false"
            android:textSize="25sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/comentario"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txComentario"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:padding="5dp" />

        <RatingBar
            android:id="@+id/ratingBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:foregroundGravity="center"
            android:isIndicator="false"
            android:numStars="5" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        tools:layout_editor_absoluteX="15dp">

        <Button
            android:id="@+id/btRestablecer"
            android:layout_width="191dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/restablecer"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/guardar"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>