<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgEvento"
        android:layout_width="179dp"
        android:layout_height="131dp"
        android:layout_weight="1"
        android:paddingRight="5dp"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:srcCompat="@android:drawable/ic_input_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/lugar" />

                <TextView
                    android:id="@+id/tvDia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/dia" />

                <TextView
                    android:id="@+id/tvHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/hora" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvLugarMos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tvDiaMos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tvHoraMos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>